--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora de Composição Corporal</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -23,7 +23,6 @@
                     </select>
                 </label>
             </fieldset>
-
             <fieldset>
                 <legend>Perímetros (cm)</legend>
                 <label>Cintura: <input type="number" step="0.1" id="pCintura" required></label>
@@ -31,7 +30,6 @@
                 <label>Abdômen: <input type="number" step="0.1" id="pAbdomen" required></label>
                 <label>Antebraço: <input type="number" step="0.1" id="pAntebraco" required></label>
             </fieldset>
-
             <fieldset>
                 <legend>Dobras Cutâneas (mm)</legend>
                 <label>Subescapular: <input type="number" step="0.1" id="dSubescapular" required></label>
@@ -42,10 +40,8 @@
                 <label>Abdominal: <input type="number" step="0.1" id="dAbdominal" required></label>
                 <label>Coxa Média: <input type="number" step="0.1" id="dCoxa" required></label>
             </fieldset>
-
             <button type="button" onclick="calcular()">Calcular</button>
         </form>
-
         <div id="resultado"></div>
     </div>
 
